fixed navbar on mobile

--- a/_includes/styles/components/navbar.css
+++ b/_includes/styles/components/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background: var(--white);
-  padding: 0 5vw;
+  padding: 1em 5vw;
   margin: 1rem auto;
   display: flex;
   flex-wrap: wrap;
@@ -10,7 +10,7 @@
   justify-content: space-between;
   max-width: 1400px;
   box-sizing: border-box;
-  height: 65px;
+  min-height: calc(65px - 2rem);
   z-index: 2;
 
   @media (min-height: 500px) {
@@ -55,7 +55,7 @@
     width: 100%;
     max-width: 1250px;
     margin: 0 auto;
-    height: 65px;
-    box-shadow: 0 0 32px -16px #0004;
+    height: 70px;
+    box-shadow: 0 0 32px -12px #0004;
   }
 }
